--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>React App</title>
-  </head>
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>React App</title>
+    </head>
+
+    <body>
+        <div id="root"></div>
+        <script src="./bundle.js"></script>
+    </body>
 </html>
