--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>React App</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     </head>
 
     <body>
