--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>React App</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     </head>
 
     <body>
         <div id="root"></div>
-        <script src="./bundle.js"></script>
+        <script src="/bundle.js"></script>
     </body>
 </html>
